# AmniX-Finance

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  SECURITY-AUDIT-README.md  SECURITY.md  audit-results.txt  audit_report.md  docker-compose.services.yml  docker-compose.yml  go.mod
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: buf-lock-generate.yml  ci.yml  generate-gosum.yml  gitops-validate.yml  image-sign.yml  load-test.yml  promote-staging-to-prod.yml  proto-breaking-change.yml  read-auth.yml  release.yml
docs/: CONTRIBUTING.md
github/workflows/: release.yml
infra/: docker-compose.m4.yml  redpanda-shadow-indexing.yaml
infra/argocd/: argocd-httproute.yaml  argocd-notifications-externalsecret.yaml  argocd-values.yaml
infra/cert-manager/: cluster-issuer.yaml
infra/clickhouse/: init.sql
infra/falco/: platform-rules.yaml
infra/kyverno/: kustomization.yaml
infra/pgbouncer/: configmap.yaml
internal/platform/: go.mod
k8s/base/: kustomization.yaml  namespaces.yaml
proto/: buf.gen.yaml  buf.yaml
scripts/: argocd_paths.py  audit.sh  loki.yaml  mimir.yaml  otel-collector.yaml  register-schemas.sh  rollback-tenant-migration.sh  setup-cert-manager-m5.sh  setup-pki.sh  tempo.yaml  vault-setup.sh
services/processing/: Cargo.toml  Dockerfile  Dockerfile.arm64  build.rs  deny.toml
services/processing/src/: main.rs
services/processing/src/consumer/: mod.rs
services/processing/src/engine/: mod.rs
services/processing/src/grpc/: mod.rs
services/processing/src/schema_registry/: client.rs
(+367 files in other folders)
