[package]
name = "processing"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "processing"
path = "src/main.rs"

[dependencies]
tonic            = { version = "0.11", features = ["tls", "gzip"] }
tonic-reflection = "0.11"
prost            = "0.12"
prost-types      = "0.12"

tokio = { version = "1", features = [
  "rt-multi-thread", "macros", "signal", "time", "sync", "fs", "net"
] }
tokio-stream = "0.1"
futures      = "0.3"

rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry         = "0.22"
opentelemetry_sdk     = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.15", features = ["tonic"] }
tracing-opentelemetry = "0.23"

axum       = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

nalgebra = "0.32"
statrs   = "0.16"
ndarray  = "0.15"

thiserror = "1"
anyhow    = "1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1
